@@ -1,5 +1,10 @@
 2009-03-06  David Gilbert  <david.gilbert@object-refinery.com>
 
+    * source/org/jfree/chart/renderer/xy/SamplingXYLineRenderer.java:
+    New class.
+
+2009-03-06  David Gilbert  <david.gilbert@object-refinery.com>
+
     * source/org/jfree/data/xy/IntervalXYDelegate.java
     (hashCode): Implemented,
     * source/org/jfree/data/xy/XYSeriesCollection.java
